--- a/to-reader.html
+++ b/to-reader.html
@@ -90,5 +90,15 @@ The Ruby on Rails Tutorial</p>
     <p>保留部分权利，禁止转载</p>
 </footer>
 
+<script><![CDATA[
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56255794-2', 'auto');
+  ga('send', 'pageview');
+]]></script>
+
 </body>
 </html>
