--- a/index.html
+++ b/index.html
@@ -251,6 +251,9 @@
 </li>
 </ol>
 </li>
+<li data-type="chapter">
+<a href="next.html#next">接下来</a>
+</li>
 </ol>
 </nav>
                 </article>
