updates copyright year, and opens another two chapters

--- a/index.html
+++ b/index.html
@@ -252,6 +252,52 @@
 </ol>
 </li>
 <li data-type="chapter">
+<a href="chapter9.html#updating-showing-and-deleting-users"><span class="title-label">第 9 章</span> 更新，显示和删除用户</a>
+<ol>
+<li data-type="sect1">
+<a href="chapter9.html#updating-users"><span class="title-label">9.1. </span> 更新用户</a>
+</li>
+<li data-type="sect1">
+<a href="chapter9.html#authorization"><span class="title-label">9.2. </span> 权限系统</a>
+</li>
+<li data-type="sect1">
+<a href="chapter9.html#showing-all-users"><span class="title-label">9.3. </span> 列出所有用户</a>
+</li>
+<li data-type="sect1">
+<a href="chapter9.html#deleting-users"><span class="title-label">9.4. </span> 删除用户</a>
+</li>
+<li data-type="sect1">
+<a href="chapter9.html#updating-showing-and-deleting-users-conclusion"><span class="title-label">9.5. </span> 小结</a>
+</li>
+<li data-type="sect1">
+<a href="chapter9.html#updating-showing-and-deleting-users-exercises"><span class="title-label">9.6. </span> 练习</a>
+</li>
+</ol>
+</li>
+<li data-type="chapter">
+<a href="chapter10.html#account-activation-and-password-reset"><span class="title-label">第 10 章</span> 账户激活和密码重设</a>
+<ol>
+<li data-type="sect1">
+<a href="chapter10.html#account-activation"><span class="title-label">10.1. </span> 账户激活</a>
+</li>
+<li data-type="sect1">
+<a href="chapter10.html#password-reset"><span class="title-label">10.2. </span> 密码重设</a>
+</li>
+<li data-type="sect1">
+<a href="chapter10.html#email-in-production"><span class="title-label">10.3. </span> 在生产环境中发送邮件</a>
+</li>
+<li data-type="sect1">
+<a href="chapter10.html#account-activation-and-password-reset-conclusion"><span class="title-label">10.4. </span> 小结</a>
+</li>
+<li data-type="sect1">
+<a href="chapter10.html#account-activation-and-password-reset-exercises"><span class="title-label">10.5. </span> 练习</a>
+</li>
+<li data-type="sect1">
+<a href="chapter10.html#proof-of-expiration-comparison"><span class="title-label">10.6. </span> 证明超时失效的比较算式</a>
+</li>
+</ol>
+</li>
+<li data-type="chapter">
 <a href="next.html#next">接下来</a>
 </li>
 </ol>
@@ -274,7 +320,7 @@
 </div>
 
 <footer class="footer">
-    <p>&copy;2013-2014 <a href="http://about.ac" title="安道的网站">安道</a></p>
+    <p>&copy;2013-2015 <a href="http://about.ac" title="安道的网站">安道</a></p>
     <p class="sns"><a href="https://twitter.com/andor_chen" title="安道的 Twitter"><i class="fa fa-twitter"></i></a> <a href="http://weibo.com/andor27" title="安道的微博"><i class="fa fa-weibo"></i></a></p>
     <p>保留部分权利，禁止转载</p>
 </footer>
