no traling dot for sub-sections

--- a/index.html
+++ b/index.html
@@ -68,25 +68,25 @@
 <a href="chapter1.html#from-zero-to-deploy"><span class="title-label">第 1 章</span> 从零开始，完成一次部署</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter1.html#introduction"><span class="title-label">1.1. </span> 简介</a>
+<a href="chapter1.html#introduction"><span class="title-label">1.1</span> 简介</a>
 </li>
 <li data-type="sect1">
-<a href="chapter1.html#up-and-running"><span class="title-label">1.2. </span> 搭建环境</a>
+<a href="chapter1.html#up-and-running"><span class="title-label">1.2</span> 搭建环境</a>
 </li>
 <li data-type="sect1">
-<a href="chapter1.html#the-first-application"><span class="title-label">1.3. </span> 第一个应用</a>
+<a href="chapter1.html#the-first-application"><span class="title-label">1.3</span> 第一个应用</a>
 </li>
 <li data-type="sect1">
-<a href="chapter1.html#version-control-with-git"><span class="title-label">1.4. </span> 使用 Git 做版本控制</a>
+<a href="chapter1.html#version-control-with-git"><span class="title-label">1.4</span> 使用 Git 做版本控制</a>
 </li>
 <li data-type="sect1">
-<a href="chapter1.html#deploying"><span class="title-label">1.5. </span> 部署</a>
+<a href="chapter1.html#deploying"><span class="title-label">1.5</span> 部署</a>
 </li>
 <li data-type="sect1">
-<a href="chapter1.html#beginning-conclusion"><span class="title-label">1.6. </span> 小结</a>
+<a href="chapter1.html#beginning-conclusion"><span class="title-label">1.6</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter1.html#beginning-exercises"><span class="title-label">1.7. </span> 练习</a>
+<a href="chapter1.html#beginning-exercises"><span class="title-label">1.7</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -94,19 +94,19 @@
 <a href="chapter2.html#a-toy-app"><span class="title-label">第 2 章</span> 玩具应用</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter2.html#planning-the-application"><span class="title-label">2.1. </span> 规划应用</a>
+<a href="chapter2.html#planning-the-application"><span class="title-label">2.1</span> 规划应用</a>
 </li>
 <li data-type="sect1">
-<a href="chapter2.html#the-users-resource"><span class="title-label">2.2. </span> 用户资源</a>
+<a href="chapter2.html#the-users-resource"><span class="title-label">2.2</span> 用户资源</a>
 </li>
 <li data-type="sect1">
-<a href="chapter2.html#the-microposts-resource"><span class="title-label">2.3. </span> 微博资源</a>
+<a href="chapter2.html#the-microposts-resource"><span class="title-label">2.3</span> 微博资源</a>
 </li>
 <li data-type="sect1">
-<a href="chapter2.html#a-toy-app-conclusion"><span class="title-label">2.4. </span> 小结</a>
+<a href="chapter2.html#a-toy-app-conclusion"><span class="title-label">2.4</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter2.html#a-toy-app-exercises"><span class="title-label">2.5. </span> 练习</a>
+<a href="chapter2.html#a-toy-app-exercises"><span class="title-label">2.5</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -114,25 +114,25 @@
 <a href="chapter3.html#mostly-static-pages"><span class="title-label">第 3 章</span> 基本静态的页面</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter3.html#sample-app-setup"><span class="title-label">3.1. </span> 创建演示应用</a>
+<a href="chapter3.html#sample-app-setup"><span class="title-label">3.1</span> 创建演示应用</a>
 </li>
 <li data-type="sect1">
-<a href="chapter3.html#static-pages"><span class="title-label">3.2. </span> 静态页面</a>
+<a href="chapter3.html#static-pages"><span class="title-label">3.2</span> 静态页面</a>
 </li>
 <li data-type="sect1">
-<a href="chapter3.html#getting-started-with-testing"><span class="title-label">3.3. </span> 开始测试</a>
+<a href="chapter3.html#getting-started-with-testing"><span class="title-label">3.3</span> 开始测试</a>
 </li>
 <li data-type="sect1">
-<a href="chapter3.html#slightly-dynamic-pages"><span class="title-label">3.4. </span> 有点动态内容的页面</a>
+<a href="chapter3.html#slightly-dynamic-pages"><span class="title-label">3.4</span> 有点动态内容的页面</a>
 </li>
 <li data-type="sect1">
-<a href="chapter3.html#mostly-static-pages-conclusion"><span class="title-label">3.5. </span> 小结</a>
+<a href="chapter3.html#mostly-static-pages-conclusion"><span class="title-label">3.5</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter3.html#mostly-static-pages-exercises"><span class="title-label">3.6. </span> 练习</a>
+<a href="chapter3.html#mostly-static-pages-exercises"><span class="title-label">3.6</span> 练习</a>
 </li>
 <li data-type="sect1">
-<a href="chapter3.html#advanced-testing-setup"><span class="title-label">3.7. </span> 高级测试技术</a>
+<a href="chapter3.html#advanced-testing-setup"><span class="title-label">3.7</span> 高级测试技术</a>
 </li>
 </ol>
 </li>
@@ -140,22 +140,22 @@
 <a href="chapter4.html#rails-flavored-ruby"><span class="title-label">第 4 章</span> Rails 背后的 Ruby</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter4.html#motivation"><span class="title-label">4.1. </span> 导言</a>
+<a href="chapter4.html#motivation"><span class="title-label">4.1</span> 导言</a>
 </li>
 <li data-type="sect1">
-<a href="chapter4.html#strings-and-methods"><span class="title-label">4.2. </span> 字符串和方法</a>
+<a href="chapter4.html#strings-and-methods"><span class="title-label">4.2</span> 字符串和方法</a>
 </li>
 <li data-type="sect1">
-<a href="chapter4.html#other-data-structures"><span class="title-label">4.3. </span> 其他数据类型</a>
+<a href="chapter4.html#other-data-structures"><span class="title-label">4.3</span> 其他数据类型</a>
 </li>
 <li data-type="sect1">
-<a href="chapter4.html#ruby-classes"><span class="title-label">4.4. </span> Ruby 类</a>
+<a href="chapter4.html#ruby-classes"><span class="title-label">4.4</span> Ruby 类</a>
 </li>
 <li data-type="sect1">
-<a href="chapter4.html#rails-flavored-ruby-conclusion"><span class="title-label">4.5. </span> 小结</a>
+<a href="chapter4.html#rails-flavored-ruby-conclusion"><span class="title-label">4.5</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter4.html#rails-flavored-ruby-exercises"><span class="title-label">4.6. </span> 练习</a>
+<a href="chapter4.html#rails-flavored-ruby-exercises"><span class="title-label">4.6</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -163,22 +163,22 @@
 <a href="chapter5.html#filling-in-the-layout"><span class="title-label">第 5 章</span> 完善布局</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter5.html#adding-some-structure"><span class="title-label">5.1. </span> 添加一些结构</a>
+<a href="chapter5.html#adding-some-structure"><span class="title-label">5.1</span> 添加一些结构</a>
 </li>
 <li data-type="sect1">
-<a href="chapter5.html#sass-and-the-asset-pipeline"><span class="title-label">5.2. </span> Sass 和 Asset Pipeline</a>
+<a href="chapter5.html#sass-and-the-asset-pipeline"><span class="title-label">5.2</span> Sass 和 Asset Pipeline</a>
 </li>
 <li data-type="sect1">
-<a href="chapter5.html#layout-links"><span class="title-label">5.3. </span> 布局中的链接</a>
+<a href="chapter5.html#layout-links"><span class="title-label">5.3</span> 布局中的链接</a>
 </li>
 <li data-type="sect1">
-<a href="chapter5.html#user-signup-a-first-step"><span class="title-label">5.4. </span> 用户注册：第一步</a>
+<a href="chapter5.html#user-signup-a-first-step"><span class="title-label">5.4</span> 用户注册：第一步</a>
 </li>
 <li data-type="sect1">
-<a href="chapter5.html#filling-in-the-layout-conclusion"><span class="title-label">5.5. </span> 小结</a>
+<a href="chapter5.html#filling-in-the-layout-conclusion"><span class="title-label">5.5</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter5.html#filling-in-the-layout-exercises"><span class="title-label">5.6. </span> 练习</a>
+<a href="chapter5.html#filling-in-the-layout-exercises"><span class="title-label">5.6</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -186,19 +186,19 @@
 <a href="chapter6.html#modeling-users"><span class="title-label">第 6 章</span> 用户模型</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter6.html#user-model"><span class="title-label">6.1. </span> 用户模型</a>
+<a href="chapter6.html#user-model"><span class="title-label">6.1</span> 用户模型</a>
 </li>
 <li data-type="sect1">
-<a href="chapter6.html#user-validations"><span class="title-label">6.2. </span> 用户数据验证</a>
+<a href="chapter6.html#user-validations"><span class="title-label">6.2</span> 用户数据验证</a>
 </li>
 <li data-type="sect1">
-<a href="chapter6.html#adding-a-secure-password"><span class="title-label">6.3. </span> 添加安全密码</a>
+<a href="chapter6.html#adding-a-secure-password"><span class="title-label">6.3</span> 添加安全密码</a>
 </li>
 <li data-type="sect1">
-<a href="chapter6.html#modeling-users-conclusion"><span class="title-label">6.4. </span> 小结</a>
+<a href="chapter6.html#modeling-users-conclusion"><span class="title-label">6.4</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter6.html#modeling-users-exercises"><span class="title-label">6.5. </span> 练习</a>
+<a href="chapter6.html#modeling-users-exercises"><span class="title-label">6.5</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -206,25 +206,25 @@
 <a href="chapter7.html#sign-up"><span class="title-label">第 7 章</span> 注册</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter7.html#showing-users"><span class="title-label">7.1. </span> 显示用户的信息</a>
+<a href="chapter7.html#showing-users"><span class="title-label">7.1</span> 显示用户的信息</a>
 </li>
 <li data-type="sect1">
-<a href="chapter7.html#signup-form"><span class="title-label">7.2. </span> 注册表单</a>
+<a href="chapter7.html#signup-form"><span class="title-label">7.2</span> 注册表单</a>
 </li>
 <li data-type="sect1">
-<a href="chapter7.html#unsuccessful-signups"><span class="title-label">7.3. </span> 注册失败</a>
+<a href="chapter7.html#unsuccessful-signups"><span class="title-label">7.3</span> 注册失败</a>
 </li>
 <li data-type="sect1">
-<a href="chapter7.html#successful-signups"><span class="title-label">7.4. </span> 注册成功</a>
+<a href="chapter7.html#successful-signups"><span class="title-label">7.4</span> 注册成功</a>
 </li>
 <li data-type="sect1">
-<a href="chapter7.html#professional-grade-deployment"><span class="title-label">7.5. </span> 专业部署方案</a>
+<a href="chapter7.html#professional-grade-deployment"><span class="title-label">7.5</span> 专业部署方案</a>
 </li>
 <li data-type="sect1">
-<a href="chapter7.html#sign-up-conclusion"><span class="title-label">7.6. </span> 小结</a>
+<a href="chapter7.html#sign-up-conclusion"><span class="title-label">7.6</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter7.html#sign-up-exercises"><span class="title-label">7.7. </span> 练习</a>
+<a href="chapter7.html#sign-up-exercises"><span class="title-label">7.7</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -232,22 +232,22 @@
 <a href="chapter8.html#log-in-log-out"><span class="title-label">第 8 章</span> 登录和退出</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter8.html#sessions"><span class="title-label">8.1. </span> 会话</a>
+<a href="chapter8.html#sessions"><span class="title-label">8.1</span> 会话</a>
 </li>
 <li data-type="sect1">
-<a href="chapter8.html#logging-in"><span class="title-label">8.2. </span> 登录</a>
+<a href="chapter8.html#logging-in"><span class="title-label">8.2</span> 登录</a>
 </li>
 <li data-type="sect1">
-<a href="chapter8.html#logging-out"><span class="title-label">8.3. </span> 退出</a>
+<a href="chapter8.html#logging-out"><span class="title-label">8.3</span> 退出</a>
 </li>
 <li data-type="sect1">
-<a href="chapter8.html#remember-me"><span class="title-label">8.4. </span> 记住我</a>
+<a href="chapter8.html#remember-me"><span class="title-label">8.4</span> 记住我</a>
 </li>
 <li data-type="sect1">
-<a href="chapter8.html#log-in-log-out-conclusion"><span class="title-label">8.5. </span> 小结</a>
+<a href="chapter8.html#log-in-log-out-conclusion"><span class="title-label">8.5</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter8.html#log-in-log-out-exercises"><span class="title-label">8.6. </span> 练习</a>
+<a href="chapter8.html#log-in-log-out-exercises"><span class="title-label">8.6</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -255,22 +255,22 @@
 <a href="chapter9.html#updating-showing-and-deleting-users"><span class="title-label">第 9 章</span> 更新，显示和删除用户</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter9.html#updating-users"><span class="title-label">9.1. </span> 更新用户</a>
+<a href="chapter9.html#updating-users"><span class="title-label">9.1</span> 更新用户</a>
 </li>
 <li data-type="sect1">
-<a href="chapter9.html#authorization"><span class="title-label">9.2. </span> 权限系统</a>
+<a href="chapter9.html#authorization"><span class="title-label">9.2</span> 权限系统</a>
 </li>
 <li data-type="sect1">
-<a href="chapter9.html#showing-all-users"><span class="title-label">9.3. </span> 列出所有用户</a>
+<a href="chapter9.html#showing-all-users"><span class="title-label">9.3</span> 列出所有用户</a>
 </li>
 <li data-type="sect1">
-<a href="chapter9.html#deleting-users"><span class="title-label">9.4. </span> 删除用户</a>
+<a href="chapter9.html#deleting-users"><span class="title-label">9.4</span> 删除用户</a>
 </li>
 <li data-type="sect1">
-<a href="chapter9.html#updating-showing-and-deleting-users-conclusion"><span class="title-label">9.5. </span> 小结</a>
+<a href="chapter9.html#updating-showing-and-deleting-users-conclusion"><span class="title-label">9.5</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter9.html#updating-showing-and-deleting-users-exercises"><span class="title-label">9.6. </span> 练习</a>
+<a href="chapter9.html#updating-showing-and-deleting-users-exercises"><span class="title-label">9.6</span> 练习</a>
 </li>
 </ol>
 </li>
@@ -278,22 +278,22 @@
 <a href="chapter10.html#account-activation-and-password-reset"><span class="title-label">第 10 章</span> 账户激活和密码重设</a>
 <ol>
 <li data-type="sect1">
-<a href="chapter10.html#account-activation"><span class="title-label">10.1. </span> 账户激活</a>
+<a href="chapter10.html#account-activation"><span class="title-label">10.1</span> 账户激活</a>
 </li>
 <li data-type="sect1">
-<a href="chapter10.html#password-reset"><span class="title-label">10.2. </span> 密码重设</a>
+<a href="chapter10.html#password-reset"><span class="title-label">10.2</span> 密码重设</a>
 </li>
 <li data-type="sect1">
-<a href="chapter10.html#email-in-production"><span class="title-label">10.3. </span> 在生产环境中发送邮件</a>
+<a href="chapter10.html#email-in-production"><span class="title-label">10.3</span> 在生产环境中发送邮件</a>
 </li>
 <li data-type="sect1">
-<a href="chapter10.html#account-activation-and-password-reset-conclusion"><span class="title-label">10.4. </span> 小结</a>
+<a href="chapter10.html#account-activation-and-password-reset-conclusion"><span class="title-label">10.4</span> 小结</a>
 </li>
 <li data-type="sect1">
-<a href="chapter10.html#account-activation-and-password-reset-exercises"><span class="title-label">10.5. </span> 练习</a>
+<a href="chapter10.html#account-activation-and-password-reset-exercises"><span class="title-label">10.5</span> 练习</a>
 </li>
 <li data-type="sect1">
-<a href="chapter10.html#proof-of-expiration-comparison"><span class="title-label">10.6. </span> 证明超时失效的比较算式</a>
+<a href="chapter10.html#proof-of-expiration-comparison"><span class="title-label">10.6</span> 证明超时失效的比较算式</a>
 </li>
 </ol>
 </li>
